--- a/system/pubspec.yaml
+++ b/system/pubspec.yaml
@@ -43,6 +43,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/tabbar/img.png
+    - assets/images/tmp.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
